--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "momentum",
+  "name": "gem-puzzle",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "lint:fix": "eslint ./src/js/** --fix"
   },
   "keywords": [],
-  "author": "Alexandr Yanykin <numelen@gmail.com>",
+  "author": "Alexandr Yanykin <al.yanykin@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -23,13 +23,14 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "html-webpack-plugin": "^5.0.0-alpha.15",
+    "latest": "^0.2.0",
     "mini-css-extract-plugin": "^1.3.0",
     "remove-files-webpack-plugin": "^1.4.4",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.39.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   }
 }
