--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "css-loader": "^5.0.1",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.22.1",
     "html-webpack-plugin": "^5.0.0-alpha.15",
     "latest": "^0.2.0",
     "mini-css-extract-plugin": "^1.3.0",
+    "prettier": "^2.6.2",
     "remove-files-webpack-plugin": "^1.4.4",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
